[tool.poetry]
name = "ghoul_price_feed"
version = "0.1.0"
description = ""
authors = ["Cameron Harris <charris@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
fastapi = "^0.68.1"

[tool.poetry.dev-dependencies]
pydantic = "^1.8.2"
fastapi = "^0.68.1"
typing = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
